# gigachat-controller

./: .gitignore  LICENSE  pyproject.toml
src/gigachat-controller/: __init__.py
src/gigachat_controller/: __init__.py
src/gigachat_controller/core/: __init__.py  controller.py
src/gigachat_controller/meta/: __init__.py  controller.py
src/gigachat_controller/models/: __init__.py  basics.py  exceptions.py
src/gigachat_controller/utils/: __init__.py  consts.py  exceptions.py  llm.py  meta.py
tests/: __main__.py
